redesigned the codebase architecture

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -550,8 +550,8 @@ a {
   }
 }
 
-@import 'utils/events';
-@import 'utils/lecture';
-@import 'utils/gallery';
-@import 'utils/subscription';
-@import 'utils/footer';
+@import 'events';
+@import 'lecture';
+@import 'gallery';
+@import 'subscription';
+@import 'footer';
