--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,4 +1,4 @@
-@import 'utils/vars';
-@import 'utils/mixins';
-@import 'utils/extends';
-@import 'utils/footer';
+@import 'vars';
+@import 'mixins';
+@import 'extends';
+@import 'footer';
