--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,6 +4,7 @@ $c-gray-main: #0f0e08;
 $c-gray-light: #687480;
 $c-gray-p: #4e4e4e;
 $c-green: #1a5a4c;
+$c-red: #d32f2f;
 $breakpoint-mobile: 320px;
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1280px;
@@ -22,3 +23,4 @@ $desktop-columns: 12;
 $desktop-column-width: 70px;
 $desktop-gutter: 30px;
 $desktop-margin: 55px;
+$animation-duration: 0.5s;
