--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -735,7 +735,12 @@ a {
      border-color: $c-green;
      box-shadow: 0 0 0 3px rgba(26, 90, 76, 0.1);
    }
- }
+}
+
+.auth-input--error {
+  border-color: #d32f2f;
+  box-shadow: 0 0 0 3px rgba(211, 47, 47, 0.12);
+}
 
 .auth-error {
   margin: 0;
